--- a/sitech/appsettings.json
+++ b/sitech/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DB": "Server=DESKTOP-AAFLUI5;Initial Catalog=sitech;Persist Security Info=False;User ID=sa;Password=12345;"
+    "DB": "Server=SERVERNAME;Initial Catalog=DBNAME;Persist Security Info=False;User ID=USER;Password=PASSWORD;"
   }
 }
